A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   cvs -z5 log -rb2xx: > log.out
   {py_dir}\Tools\scripts\logmerge.py -t < log.out > log2.out
However contributors are encouraged to add their own entries for their work.

Since build 211:
----------------

Since build 210:
----------------
* Support for RegisterDeviceNotification in win32gui and for packing and
  unpacking the various structures in win32gui_struct.  Demos in 
  win32\Demos\win32gui_devicenotify.py and service\serviceEvents.py

* adodbapi added to pywin32 package CVS tree:
- this pure python package is a fully dbapi 2.0 compliant database access
  method. This is a copy of the code from the adodbapi sourceforge project,
  which will eventually become obsolete in favor of this site. Inclusion here
  and maintenance of the package are by Vernon Cole.

* Available for AMD64 versions of Windows for Python 2.6 and later (support
  for Python 2.5 is just too hard, sorry).  Lots of help from Roger, 
  Steve Yin and Sidnei da Silva.

* com related changes:

- win32com.bits: Sidnei da Silva from Enfold Systems added support for
  BITS (Background Intelligent Transfer Service). Not fully complete
  (missing Ranges-related APIs and a couple others) but the basic
  functionality is in place. See the demos in
  win32comext/bits/test/*.py

- makepy accepts a program id to process its typelib and generates long 
  integer literals for constants > sys.maxint.  The way typelibs are generated
  also changes slightly, fixing a bug with certain hex version numbers in 
  the registry.  Fix a bug [1548903] that could cause incomplete generated 
  files when a typelib was missing

- win32com.client: Fix a bug [1587023] that prevented Get and Set properties
  working for ITypeComp implementing objects.  Add automatic "cast" to an
  interface when using iterators [1707700]

- win32com.axcontrol: Module for using ActiveX controls independently of